افزودن فرم دانش آموزان/حضور غیاب روزانه/حساب کاربری/بهبود نمایش تصاویر در گرید

--- a/ClassSRM/Form1.resx
+++ b/ClassSRM/Form1.resx
@@ -245,45 +245,48 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjE3LjEsIFZlcnNpb249MTcuMS40
         LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
-        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAMgIAAAC77u/
-        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
-        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
-        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
-        Y2U9InByZXNlcnZlIiBpZD0i0KHQu9C+0LlfMSI+DQogIDxwYXRoIGQ9Ik00LDJ2MjhoMjRWOFYySDR6
-        IiBmaWxsPSIjNzI3MjcyIiBjbGFzcz0iQmxhY2siIC8+DQogIDxwb2x5Z29uIHBvaW50cz0iMjYsMTYg
-        MjYsNCA2LDQgNiwyOCAxNiwyOCAxNiwzMCAyOCwzMCAyOCwxNiAiIGZpbGw9IiNGRkZGRkYiIGNsYXNz
-        PSJXaGl0ZSIgLz4NCiAgPGcgb3BhY2l0eT0iMC42IiBjbGFzcz0ic3QwIj4NCiAgICA8cmVjdCB4PSIx
-        MiIgeT0iNiIgd2lkdGg9IjEyIiBoZWlnaHQ9IjIiIHJ4PSIwIiByeT0iMCIgZmlsbD0iIzcyNzI3MiIg
-        b3BhY2l0eT0iMC42IiBjbGFzcz0iQmxhY2siIC8+DQogICAgPHJlY3QgeD0iMTIiIHk9IjE4IiB3aWR0
-        aD0iNiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIG9wYWNpdHk9IjAuNiIg
-        Y2xhc3M9IkJsYWNrIiAvPg0KICAgIDxyZWN0IHg9IjEyIiB5PSIyMiIgd2lkdGg9IjYiIGhlaWdodD0i
-        MiIgcng9IjAiIHJ5PSIwIiBmaWxsPSIjNzI3MjcyIiBvcGFjaXR5PSIwLjYiIGNsYXNzPSJCbGFjayIg
-        Lz4NCiAgICA8cmVjdCB4PSIxMiIgeT0iMTAiIHdpZHRoPSIxMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9
-        IjAiIGZpbGw9IiM3MjcyNzIiIG9wYWNpdHk9IjAuNiIgY2xhc3M9IkJsYWNrIiAvPg0KICAgIDxyZWN0
-        IHg9IjEyIiB5PSIxNCIgd2lkdGg9IjEyIiBoZWlnaHQ9IjIiIHJ4PSIwIiByeT0iMCIgZmlsbD0iIzcy
-        NzI3MiIgb3BhY2l0eT0iMC42IiBjbGFzcz0iQmxhY2siIC8+DQogIDwvZz4NCiAgPGc+DQogICAgPGc+
-        DQogICAgICA8cmVjdCB4PSI4IiB5PSI2IiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAi
-        IGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjE4IiB3
-        aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFj
-        ayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjIyIiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIg
-        cnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9
-        IjEwIiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNz
-        PSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjE0IiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiBy
-        eD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICA8L2c+DQogICAg
-        PGc+DQogICAgICA8cmVjdCB4PSI4IiB5PSI2IiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9
-        IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjE4
-        IiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJC
-        bGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjIyIiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0i
-        MCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9Ijgi
-        IHk9IjEwIiB3aWR0aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNs
-        YXNzPSJCbGFjayIgLz4NCiAgICAgIDxyZWN0IHg9IjgiIHk9IjE0IiB3aWR0aD0iMiIgaGVpZ2h0PSIy
-        IiByeD0iMCIgcnk9IjAiIGZpbGw9IiM3MjcyNzIiIGNsYXNzPSJCbGFjayIgLz4NCiAgICA8L2c+DQog
-        IDwvZz4NCiAgPHBhdGggZD0iTTI3LDI3LjJjMi41LDAuNywzLDEuNywzLDQuOGgtMy43SDE4YzAtMy4y
-        LDAuNS00LjEsMy00LjhjMS4zLTAuNCwxLjUtMS4zLDEuNS0xLjdDMjEuNywyNC42LDIxLDIzLDIxLDIx
-        LjIgIGMwLTAuMSwwLTAuMywwLTAuNWMwLTEuNCwxLjQtMi43LDIuOS0yLjdjMCwwLDAsMCwwLjEsMGMw
-        LDAsMCwwLDAuMSwwYzEuNSwwLDIuOSwxLjMsMi45LDIuN2MwLDAuMywwLDAuNCwwLDAuNSAgYzAsMS44
-        LTAuNywzLjQtMS41LDQuM0MyNS41LDI1LjksMjUuNywyNi44LDI3LDI3LjJ6IiBmaWxsPSIjMTE3N0Q3
-        IiBjbGFzcz0iQmx1ZSIgLz4NCjwvc3ZnPgs=
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAGwJAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgdmlld0JveD0iMCAwIDE0
+        MCAxNDAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgaWQ9IkxheWVyXzEiPg0KICA8
+        ZGVmcyAvPg0KICA8Y2lyY2xlIGN4PSI3MCIgY3k9IjcwIiByPSI2NCIgZmlsbD0iIzUyYjFiMSIgY2xh
+        c3M9ImNscy0xIiAvPg0KICA8cmVjdCB4PSIzOSIgeT0iMjIiIHdpZHRoPSI2NCIgaGVpZ2h0PSI5OCIg
+        cng9IjEiIHJ5PSIxIiBmaWxsPSIjNTI1MzU0IiBjbGFzcz0iY2xzLTIiIC8+DQogIDxyZWN0IHg9IjM4
+        IiB5PSIyMSIgd2lkdGg9IjY0IiBoZWlnaHQ9Ijk4IiByeD0iMSIgcnk9IjEiIGZpbGw9IiNjY2JlYjAi
+        IGNsYXNzPSJjbHMtMyIgLz4NCiAgPHJlY3QgeD0iNDMiIHk9IjI2IiB3aWR0aD0iNTYiIGhlaWdodD0i
+        OTAiIHJ4PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4
+        PSI0MiIgeT0iMjUiIHdpZHRoPSI1NiIgaGVpZ2h0PSI5MCIgcng9IjEiIHJ5PSIxIiBmaWxsPSIjZmZm
+        IiBjbGFzcz0iY2xzLTQiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSIzOCIgd2lkdGg9IjMwIiBoZWlnaHQ9
+        IjMiIHJ4PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4
+        PSI2MyIgeT0iNDUiIHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUz
+        NTQiIGNsYXNzPSJjbHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDQyLjkzbC0xLjM5LTEuMzlhMSwx
+        LDAsMCwwLTEuNDEsMGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwx
+        LjQxLDBsMS41NC0xLjU0TDU4Ljc1LDQxYTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCww
+        LTEuNDEsMGwtNC4yLDQuMkExLDEsMCwwLDEsNTAuODksNDIuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFz
+        cz0iY2xzLTEiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSI1NyIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4
+        PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIg
+        eT0iNjQiIHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUzNTQiIGNs
+        YXNzPSJjbHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDYxLjkzbC0xLjM5LTEuMzlhMSwxLDAsMCww
+        LTEuNDEsMGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwxLjQxLDBs
+        MS41NC0xLjU0TDU4Ljc1LDYwYTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCwwLTEuNDEs
+        MGwtNC4yLDQuMkExLDEsMCwwLDEsNTAuODksNjEuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFzcz0iY2xz
+        LTEiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSI3NiIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4PSIxIiBy
+        eT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIgeT0iODMi
+        IHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUzNTQiIGNsYXNzPSJj
+        bHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDgwLjkzbC0xLjM5LTEuMzlhMSwxLDAsMCwwLTEuNDEs
+        MGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwxLjQxLDBsMS41NC0x
+        LjU0TDU4Ljc1LDc5YTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCwwLTEuNDEsMGwtNC4y
+        LDQuMkExLDEsMCwwLDEsNTAuODksODAuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFzcz0iY2xzLTEiIC8+
+        DQogIDxyZWN0IHg9IjYzIiB5PSI5NSIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4PSIxIiByeT0iMSIg
+        ZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIgeT0iMTAyIiB3aWR0
+        aD0iMTgiIGhlaWdodD0iMyIgcng9IjEiIHJ5PSIxIiBmaWxsPSIjNTI1MzU0IiBjbGFzcz0iY2xzLTIi
+        IC8+DQogIDxwYXRoIGQ9Ik01MC44OSw5OS45M2wtMS4zOS0xLjM5YTEsMSwwLDAsMC0xLjQxLDBsLS44
+        My44M2ExLDEsMCwwLDAsMCwxLjQxbDMuNjQsMy42NGExLDEsMCwwLDAsMS40MSwwbDEuNTQtMS41NEw1
+        OC43NSw5OGExLDEsMCwwLDAsMC0xLjQxbC0uODMtLjgzYTEsMSwwLDAsMC0xLjQxLDBsLTQuMiw0LjJB
+        MSwxLDAsMCwxLDUwLjg5LDk5LjkzWiIgZmlsbD0iIzUyYjFiMSIgY2xhc3M9ImNscy0xIiAvPg0KICA8
+        cmVjdCB4PSI1NSIgeT0iMjQuNSIgd2lkdGg9IjMyIiBoZWlnaHQ9IjQiIHJ4PSIxIiByeT0iMSIgZmls
+        bD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI1NCIgeT0iMjMuNSIgd2lkdGg9
+        IjMyIiBoZWlnaHQ9IjQiIHJ4PSIxIiByeT0iMSIgZmlsbD0iI2Q3ZGFkYiIgY2xhc3M9ImNscy01IiAv
+        Pg0KPC9zdmc+Cw==
 </value>
   </data>
   <data name="btnBookEva.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v17.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -691,30 +694,48 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjE3LjEsIFZlcnNpb249MTcuMS40
         LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
-        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAFAFAAAC77u/
-        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
-        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
-        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
-        Y2U9InByZXNlcnZlIiBpZD0i0KHQu9C+0LlfMSI+DQogIDxyZWN0IHg9IjQiIHk9IjQiIHdpZHRoPSIy
-        NCIgaGVpZ2h0PSIyOCIgcng9IjAiIHJ5PSIwIiBmaWxsPSIjRkZCMTE1IiBjbGFzcz0iWWVsbG93IiAv
-        Pg0KICA8cGF0aCBkPSJNMjQsNlYyaC00bC0wLjYtMC42QzE4LjUsMC41LDE3LjMsMCwxNiwwcy0yLjUs
-        MC41LTMuNCwxLjRMMTIsMkg4djRINnYyNGgyMFYxMFY2SDI0eiIgZmlsbD0iIzcyNzI3MiIgY2xhc3M9
-        IkJsYWNrIiAvPg0KICA8cG9seWxpbmUgcG9pbnRzPSIyNCwyOCA4LDI4IDgsOCAyMCw4IDI0LDggMjQs
-        MTIgIiBmaWxsPSIjRkZGRkZGIiBjbGFzcz0iV2hpdGUiIC8+DQogIDxyZWN0IHg9IjEwIiB5PSIxMCIg
-        d2lkdGg9IjIiIGhlaWdodD0iMiIgcng9IjAiIHJ5PSIwIiBmaWxsPSIjRDExQzFDIiBjbGFzcz0iUmVk
-        IiAvPg0KICA8cmVjdCB4PSIxMCIgeT0iMTQiIHdpZHRoPSIyIiBoZWlnaHQ9IjIiIHJ4PSIwIiByeT0i
-        MCIgZmlsbD0iI0QxMUMxQyIgY2xhc3M9IlJlZCIgLz4NCiAgPHJlY3QgeD0iMTAiIHk9IjE4IiB3aWR0
-        aD0iMiIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9IjAiIGZpbGw9IiNEMTFDMUMiIGNsYXNzPSJSZWQiIC8+
-        DQogIDxyZWN0IHg9IjEwIiB5PSIyMiIgd2lkdGg9IjIiIGhlaWdodD0iMiIgcng9IjAiIHJ5PSIwIiBm
-        aWxsPSIjRDExQzFDIiBjbGFzcz0iUmVkIiAvPg0KICA8ZyBvcGFjaXR5PSIwLjYiIGlkPSLQodC70L7Q
-        uV8yIiBjbGFzcz0ic3QwIj4NCiAgICA8cmVjdCB4PSIxNCIgeT0iMTAiIHdpZHRoPSI4IiBoZWlnaHQ9
-        IjIiIHJ4PSIwIiByeT0iMCIgZmlsbD0iIzcyNzI3MiIgb3BhY2l0eT0iMC42IiBjbGFzcz0iQmxhY2si
-        IC8+DQogICAgPHJlY3QgeD0iMTQiIHk9IjE0IiB3aWR0aD0iOCIgaGVpZ2h0PSIyIiByeD0iMCIgcnk9
-        IjAiIGZpbGw9IiM3MjcyNzIiIG9wYWNpdHk9IjAuNiIgY2xhc3M9IkJsYWNrIiAvPg0KICAgIDxyZWN0
-        IHg9IjE0IiB5PSIxOCIgd2lkdGg9IjgiIGhlaWdodD0iMiIgcng9IjAiIHJ5PSIwIiBmaWxsPSIjNzI3
-        MjcyIiBvcGFjaXR5PSIwLjYiIGNsYXNzPSJCbGFjayIgLz4NCiAgICA8cmVjdCB4PSIxNCIgeT0iMjIi
-        IHdpZHRoPSI4IiBoZWlnaHQ9IjIiIHJ4PSIwIiByeT0iMCIgZmlsbD0iIzcyNzI3MiIgb3BhY2l0eT0i
-        MC42IiBjbGFzcz0iQmxhY2siIC8+DQogIDwvZz4NCjwvc3ZnPgs=
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAGwJAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgdmlld0JveD0iMCAwIDE0
+        MCAxNDAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgaWQ9IkxheWVyXzEiPg0KICA8
+        ZGVmcyAvPg0KICA8Y2lyY2xlIGN4PSI3MCIgY3k9IjcwIiByPSI2NCIgZmlsbD0iIzUyYjFiMSIgY2xh
+        c3M9ImNscy0xIiAvPg0KICA8cmVjdCB4PSIzOSIgeT0iMjIiIHdpZHRoPSI2NCIgaGVpZ2h0PSI5OCIg
+        cng9IjEiIHJ5PSIxIiBmaWxsPSIjNTI1MzU0IiBjbGFzcz0iY2xzLTIiIC8+DQogIDxyZWN0IHg9IjM4
+        IiB5PSIyMSIgd2lkdGg9IjY0IiBoZWlnaHQ9Ijk4IiByeD0iMSIgcnk9IjEiIGZpbGw9IiNjY2JlYjAi
+        IGNsYXNzPSJjbHMtMyIgLz4NCiAgPHJlY3QgeD0iNDMiIHk9IjI2IiB3aWR0aD0iNTYiIGhlaWdodD0i
+        OTAiIHJ4PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4
+        PSI0MiIgeT0iMjUiIHdpZHRoPSI1NiIgaGVpZ2h0PSI5MCIgcng9IjEiIHJ5PSIxIiBmaWxsPSIjZmZm
+        IiBjbGFzcz0iY2xzLTQiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSIzOCIgd2lkdGg9IjMwIiBoZWlnaHQ9
+        IjMiIHJ4PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4
+        PSI2MyIgeT0iNDUiIHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUz
+        NTQiIGNsYXNzPSJjbHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDQyLjkzbC0xLjM5LTEuMzlhMSwx
+        LDAsMCwwLTEuNDEsMGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwx
+        LjQxLDBsMS41NC0xLjU0TDU4Ljc1LDQxYTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCww
+        LTEuNDEsMGwtNC4yLDQuMkExLDEsMCwwLDEsNTAuODksNDIuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFz
+        cz0iY2xzLTEiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSI1NyIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4
+        PSIxIiByeT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIg
+        eT0iNjQiIHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUzNTQiIGNs
+        YXNzPSJjbHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDYxLjkzbC0xLjM5LTEuMzlhMSwxLDAsMCww
+        LTEuNDEsMGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwxLjQxLDBs
+        MS41NC0xLjU0TDU4Ljc1LDYwYTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCwwLTEuNDEs
+        MGwtNC4yLDQuMkExLDEsMCwwLDEsNTAuODksNjEuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFzcz0iY2xz
+        LTEiIC8+DQogIDxyZWN0IHg9IjYzIiB5PSI3NiIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4PSIxIiBy
+        eT0iMSIgZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIgeT0iODMi
+        IHdpZHRoPSIxOCIgaGVpZ2h0PSIzIiByeD0iMSIgcnk9IjEiIGZpbGw9IiM1MjUzNTQiIGNsYXNzPSJj
+        bHMtMiIgLz4NCiAgPHBhdGggZD0iTTUwLjg5LDgwLjkzbC0xLjM5LTEuMzlhMSwxLDAsMCwwLTEuNDEs
+        MGwtLjgzLjgzYTEsMSwwLDAsMCwwLDEuNDFsMy42NCwzLjY0YTEsMSwwLDAsMCwxLjQxLDBsMS41NC0x
+        LjU0TDU4Ljc1LDc5YTEsMSwwLDAsMCwwLTEuNDFsLS44My0uODNhMSwxLDAsMCwwLTEuNDEsMGwtNC4y
+        LDQuMkExLDEsMCwwLDEsNTAuODksODAuOTNaIiBmaWxsPSIjNTJiMWIxIiBjbGFzcz0iY2xzLTEiIC8+
+        DQogIDxyZWN0IHg9IjYzIiB5PSI5NSIgd2lkdGg9IjMwIiBoZWlnaHQ9IjMiIHJ4PSIxIiByeT0iMSIg
+        ZmlsbD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI2MyIgeT0iMTAyIiB3aWR0
+        aD0iMTgiIGhlaWdodD0iMyIgcng9IjEiIHJ5PSIxIiBmaWxsPSIjNTI1MzU0IiBjbGFzcz0iY2xzLTIi
+        IC8+DQogIDxwYXRoIGQ9Ik01MC44OSw5OS45M2wtMS4zOS0xLjM5YTEsMSwwLDAsMC0xLjQxLDBsLS44
+        My44M2ExLDEsMCwwLDAsMCwxLjQxbDMuNjQsMy42NGExLDEsMCwwLDAsMS40MSwwbDEuNTQtMS41NEw1
+        OC43NSw5OGExLDEsMCwwLDAsMC0xLjQxbC0uODMtLjgzYTEsMSwwLDAsMC0xLjQxLDBsLTQuMiw0LjJB
+        MSwxLDAsMCwxLDUwLjg5LDk5LjkzWiIgZmlsbD0iIzUyYjFiMSIgY2xhc3M9ImNscy0xIiAvPg0KICA8
+        cmVjdCB4PSI1NSIgeT0iMjQuNSIgd2lkdGg9IjMyIiBoZWlnaHQ9IjQiIHJ4PSIxIiByeT0iMSIgZmls
+        bD0iIzUyNTM1NCIgY2xhc3M9ImNscy0yIiAvPg0KICA8cmVjdCB4PSI1NCIgeT0iMjMuNSIgd2lkdGg9
+        IjMyIiBoZWlnaHQ9IjQiIHJ4PSIxIiByeT0iMSIgZmlsbD0iI2Q3ZGFkYiIgY2xhc3M9ImNscy01IiAv
+        Pg0KPC9zdmc+Cw==
 </value>
   </data>
   <data name="btnActPointList.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v17.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1036,15 +1057,54 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjE3LjEsIFZlcnNpb249MTcuMS40
         LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
-        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAANoBAAAC77u/
-        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
-        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
-        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
-        Y2U9InByZXNlcnZlIiBpZD0i0KHQu9C+0LlfMSI+DQogIDxnIGlkPSLQodC70L7QuV8yIj4NCiAgICA8
-        Zz4NCiAgICAgIDxnPg0KICAgICAgICA8cG9seWdvbiBwb2ludHM9IjEwLDQgNCwxMiA4LDEyIDgsMjgg
-        MTIsMjggMTIsMTIgMTYsMTIgICAgIiBmaWxsPSIjNzI3MjcyIiBjbGFzcz0iQmxhY2siIC8+DQogICAg
-        ICA8L2c+DQogICAgPC9nPg0KICAgIDxwYXRoIGQ9Ik0yNCwyMGwwLTE2aC00djE2aC00bDYsOGw2LThI
-        MjR6IiBmaWxsPSIjMTE3N0Q3IiBjbGFzcz0iQmx1ZSIgLz4NCiAgPC9nPg0KPC9zdmc+Cw==
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAPgKAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgd2lkdGg9IjQwMHB4IiBo
+        ZWlnaHQ9IjQwMHB4IiB2aWV3Qm94PSIwIDAgNDAwIDQwMCIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0
+        cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5
+        L3hsaW5rIj4NCiAgPGRlZnM+DQogICAgPHBhdGggZD0iTTE0Ni4wNDg5ODQsMjQgTDkuNTkzNTc2NDIs
+        MjQgQzQuMjkzMTU0MDUsMjQgMCwyOC4yOTg4Mzk3IDAsMzMuNjAxNzI3MyBMMCwxNjggTDI0MCwxNjgg
+        TDI0MCw5LjU5ODI1OTUzIEMyNDAsNC4yODgzMDcxOSAyMzUuNzAxOTA2LDAgMjMwLjM5OTkzOSwwIEwx
+        ODAuMDAyOTA0LDAgQzE2NC4zMjk2MiwwIDE1MC45OTIxNzMsMTAuMDE3NjkxNSAxNDYuMDQ4OTg0LDI0
+        IEwxNDYuMDQ4OTg0LDI0IFoiIGlkPSJwYXRoLTEiIC8+DQogICAgPHJlY3QgeD0iMTEyIiB5PSIxNjgi
+        IHdpZHRoPSIxNyIgaGVpZ2h0PSIyNCIgcng9IjAiIHJ5PSIwIiBpZD0icGF0aC0zIiAvPg0KICAgIDxy
+        ZWN0IHg9IjAiIHk9IjE5NSIgd2lkdGg9Ijk2IiBoZWlnaHQ9IjE3IiByeD0iNy4yIiByeT0iMCIgaWQ9
+        InBhdGgtNSIgLz4NCiAgICA8cmVjdCB4PSIxNDQiIHk9IjE5NSIgd2lkdGg9Ijk2IiBoZWlnaHQ9IjE3
+        IiByeD0iNy4yIiByeT0iMCIgaWQ9InBhdGgtNyIgLz4NCiAgICA8cmVjdCB4PSI4NCIgeT0iMTg3IiB3
+        aWR0aD0iNzIiIGhlaWdodD0iMzQiIHJ4PSI3LjIiIHJ5PSIwIiBpZD0icGF0aC05IiAvPg0KICA8L2Rl
+        ZnM+DQogIDxnIGZpbGw9Im5vbmUiIGlkPSJQYWdlLTEiIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRo
+        PSIxcHgiIGZpbGwtcnVsZT0iZXZlbm9kZCI+DQogICAgPGcgZmlsbD0ibm9uZSIgaWQ9ImZvbGRlciIg
+        c3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjFweCI+DQogICAgICA8cGF0aCBkPSJNMjAwLDQwMCBD
+        MzEwLjQ1Njk1LDQwMCA0MDAsMzEwLjQ1Njk1IDQwMCwyMDAgQzQwMCw4OS41NDMwNSAzMTAuNDU2OTUs
+        MCAyMDAsMCBDODkuNTQzMDUsMCAwLDg5LjU0MzA1IDAsMjAwIEMwLDMxMC40NTY5NSA4OS41NDMwNSw0
+        MDAgMjAwLDQwMCBaIiBmaWxsPSIjODJBM0ExIiBpZD0iYmFja2dyb3VuZCIgc3Ryb2tlPSJub25lIiBz
+        dHJva2Utd2lkdGg9IjFweCIgLz4NCiAgICAgIDxnIGZpbGw9Im5vbmUiIGlkPSJHcm91cC0xNCIgdHJh
+        bnNmb3JtPSJ0cmFuc2xhdGUoODAsIDg5KSIgc3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjFweCI+
+        DQogICAgICAgIDxnIGZpbGw9Im5vbmUiIGlkPSJDb21iaW5lZC1TaGFwZSIgc3Ryb2tlPSJub25lIiBz
+        dHJva2Utd2lkdGg9IjFweCI+DQogICAgICAgICAgPHVzZSB4bGluazpocmVmPSIjcGF0aC0xIiBmaWxs
+        PSJibGFjayIgZmlsbC1vcGFjaXR5PSIxIiBzdHJva2U9Im5vbmUiIHN0cm9rZS13aWR0aD0iMXB4IiAv
+        Pg0KICAgICAgICAgIDx1c2UgeGxpbms6aHJlZj0iI3BhdGgtMSIgZmlsbD0iI0YyRUNEMiIgc3Ryb2tl
+        PSJub25lIiBzdHJva2Utd2lkdGg9IjFweCIgZmlsbC1ydWxlPSJldmVub2RkIiAvPg0KICAgICAgICA8
+        L2c+DQogICAgICAgIDxnIGZpbGw9Im5vbmUiIGlkPSJSZWN0YW5nbGUtMzIiIHN0cm9rZT0ibm9uZSIg
+        c3Ryb2tlLXdpZHRoPSIxcHgiPg0KICAgICAgICAgIDx1c2UgeGxpbms6aHJlZj0iI3BhdGgtMyIgZmls
+        bD0iYmxhY2siIGZpbGwtb3BhY2l0eT0iMSIgc3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjFweCIg
+        Lz4NCiAgICAgICAgICA8dXNlIHhsaW5rOmhyZWY9IiNwYXRoLTMiIGZpbGw9IiM1NDVFNzUiIHN0cm9r
+        ZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxcHgiIGZpbGwtcnVsZT0iZXZlbm9kZCIgLz4NCiAgICAgICAg
+        PC9nPg0KICAgICAgICA8ZyBmaWxsPSJub25lIiBpZD0iUmVjdGFuZ2xlLTMzIiBzdHJva2U9Im5vbmUi
+        IHN0cm9rZS13aWR0aD0iMXB4Ij4NCiAgICAgICAgICA8dXNlIHhsaW5rOmhyZWY9IiNwYXRoLTUiIGZp
+        bGw9ImJsYWNrIiBmaWxsLW9wYWNpdHk9IjEiIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxcHgi
+        IC8+DQogICAgICAgICAgPHVzZSB4bGluazpocmVmPSIjcGF0aC01IiBmaWxsPSIjRjJFQ0QyIiBzdHJv
+        a2U9Im5vbmUiIHN0cm9rZS13aWR0aD0iMXB4IiBmaWxsLXJ1bGU9ImV2ZW5vZGQiIC8+DQogICAgICAg
+        IDwvZz4NCiAgICAgICAgPGcgZmlsbD0ibm9uZSIgaWQ9IlJlY3RhbmdsZS0zNSIgc3Ryb2tlPSJub25l
+        IiBzdHJva2Utd2lkdGg9IjFweCI+DQogICAgICAgICAgPHVzZSB4bGluazpocmVmPSIjcGF0aC03IiBm
+        aWxsPSJibGFjayIgZmlsbC1vcGFjaXR5PSIxIiBzdHJva2U9Im5vbmUiIHN0cm9rZS13aWR0aD0iMXB4
+        IiAvPg0KICAgICAgICAgIDx1c2UgeGxpbms6aHJlZj0iI3BhdGgtNyIgZmlsbD0iI0YyRUNEMiIgc3Ry
+        b2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjFweCIgZmlsbC1ydWxlPSJldmVub2RkIiAvPg0KICAgICAg
+        ICA8L2c+DQogICAgICAgIDxnIGZpbGw9Im5vbmUiIGlkPSJSZWN0YW5nbGUtMzQiIHN0cm9rZT0ibm9u
+        ZSIgc3Ryb2tlLXdpZHRoPSIxcHgiPg0KICAgICAgICAgIDx1c2UgeGxpbms6aHJlZj0iI3BhdGgtOSIg
+        ZmlsbD0iYmxhY2siIGZpbGwtb3BhY2l0eT0iMSIgc3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjFw
+        eCIgLz4NCiAgICAgICAgICA8dXNlIHhsaW5rOmhyZWY9IiNwYXRoLTkiIGZpbGw9IiM1NDVFNzUiIHN0
+        cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxcHgiIGZpbGwtcnVsZT0iZXZlbm9kZCIgLz4NCiAgICAg
+        ICAgPC9nPg0KICAgICAgPC9nPg0KICAgIDwvZz4NCiAgPC9nPg0KPC9zdmc+Cw==
 </value>
   </data>
   <metadata name="dockManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
